--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,25 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: stretch;
+  min-height: 100vh;
+}
+.main{
+  width:100%;
+  height:80%;
+  display:flex;
+  flex-direction:row;
+  align-items: stretch;
+  justify-content: stretch;
+}
+.table{
+  width:80%;
+  margin-left:30px
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+@media(max-width: 950px){
+  .main{
+    justify-content: center;
   }
 }
